--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -42,7 +42,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
         android:background="@drawable/round_button"
-        android:text="Sign up"
+        android:text="Sign Up"
         android:textAllCaps="false"
         android:textColor="#FFFFFF"
         android:textSize="18sp"
