Add Material component text field for log in

--- a/app/src/main/res/layout/activity_initial_connect.xml
+++ b/app/src/main/res/layout/activity_initial_connect.xml
@@ -36,11 +36,12 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="50dp"
-        android:background="@drawable/round_button"
+        android:insetTop="@dimen/inset_top"
+        android:insetBottom="@dimen/inset_bottom"
         android:text="Continue"
         android:textAllCaps="false"
-        android:textColor="#FFFFFF"
-        android:textSize="18sp"
+        android:textSize="@dimen/text_size"
+        app:cornerRadius="@dimen/corner_radius"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/text_finish_sign_up"
         app:layout_constraintStart_toStartOf="@+id/text_finish_sign_up" />
