--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -41,11 +41,12 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
-        android:background="@drawable/round_button"
+        android:insetTop="@dimen/inset_top"
+        android:insetBottom="@dimen/inset_bottom"
         android:text="Sign Up"
         android:textAllCaps="false"
-        android:textColor="#FFFFFF"
-        android:textSize="18sp"
+        android:textSize="@dimen/text_size"
+        app:cornerRadius="@dimen/corner_radius"
         app:layout_constraintBottom_toTopOf="@+id/text_log_in"
         app:layout_constraintEnd_toEndOf="@+id/text_welcome_caption"
         app:layout_constraintHorizontal_bias="0.0"
