--- a/app/src/main/res/layout/item_transaction.xml
+++ b/app/src/main/res/layout/item_transaction.xml
@@ -8,7 +8,7 @@
     android:visibility="visible">
 
     <TextView
-        android:id="@+id/text_transaction_name"
+        android:id="@+id/textTransactionName"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -18,43 +18,43 @@
         android:lines="1"
         android:text="The Home Depot"
         android:textSize="16sp"
-        app:layout_constraintEnd_toStartOf="@+id/text_transaction_amount"
+        app:layout_constraintEnd_toStartOf="@+id/textTransactionAmount"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/text_transaction_location"
+        android:id="@+id/textTransactionLocation"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="32dp"
         android:fontFamily="sans-serif-light"
         android:text="San Francisco, CA"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/text_transaction_name"
-        app:layout_constraintTop_toBottomOf="@+id/text_transaction_name" />
+        app:layout_constraintStart_toStartOf="@+id/textTransactionName"
+        app:layout_constraintTop_toBottomOf="@+id/textTransactionName" />
 
     <TextView
-        android:id="@+id/text_transaction_date"
+        android:id="@+id/textTransactionDate"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:fontFamily="sans-serif-light"
         android:text="TextView"
-        app:layout_constraintEnd_toEndOf="@+id/text_transaction_name"
-        app:layout_constraintStart_toStartOf="@+id/text_transaction_name"
-        app:layout_constraintTop_toBottomOf="@+id/text_transaction_location"
+        app:layout_constraintEnd_toEndOf="@+id/textTransactionName"
+        app:layout_constraintStart_toStartOf="@+id/textTransactionName"
+        app:layout_constraintTop_toBottomOf="@+id/textTransactionLocation"
         tools:text="4/9/20" />
 
     <TextView
-        android:id="@+id/text_transaction_amount"
+        android:id="@+id/textTransactionAmount"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="32dp"
         android:text="$22.14"
         android:textAlignment="viewEnd"
         android:textSize="16sp"
-        app:layout_constraintBottom_toBottomOf="@+id/text_transaction_name"
+        app:layout_constraintBottom_toBottomOf="@+id/textTransactionName"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/text_transaction_name" />
+        app:layout_constraintTop_toTopOf="@+id/textTransactionName" />
 
     <View
         android:id="@+id/divider"
@@ -66,6 +66,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/text_transaction_date" />
+        app:layout_constraintTop_toBottomOf="@+id/textTransactionDate" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
