--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -15,11 +15,11 @@
         android:id="@+id/navigation_saved"
         android:name="com.crystal.hello.ui.saved.SavedFragment"
         android:label="@string/title_saved"
-        tools:layout="@layout/fragment_dashboard" />
+        tools:layout="@layout/fragment_saved" />
 
     <fragment
         android:id="@+id/navigation_profile"
         android:name="com.crystal.hello.ui.profile.ProfileFragment"
         android:label="@string/title_profile"
-        tools:layout="@layout/fragment_notifications" />
+        tools:layout="@layout/fragment_profile" />
 </navigation>
