--- a/app/src/main/res/layout/item_transaction.xml
+++ b/app/src/main/res/layout/item_transaction.xml
@@ -26,10 +26,9 @@
         android:id="@+id/textTransactionLocation"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="32dp"
         android:fontFamily="sans-serif-light"
         android:text="San Francisco, CA"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/textTransactionAmount"
         app:layout_constraintStart_toStartOf="@+id/textTransactionName"
         app:layout_constraintTop_toBottomOf="@+id/textTransactionName" />
 
@@ -48,13 +47,23 @@
         android:id="@+id/textTransactionAmount"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="32dp"
+        android:layout_marginEnd="8dp"
         android:text="$22.14"
         android:textAlignment="viewEnd"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="@+id/textTransactionName"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/imageView"
         app:layout_constraintTop_toTopOf="@+id/textTransactionName" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintBottom_toBottomOf="@+id/textTransactionAmount"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/textTransactionAmount"
+        app:srcCompat="@drawable/ic_baseline_arrow_forward_ios_24" />
 
     <View
         android:id="@+id/divider"
