Reformat transaction date

--- a/app/src/main/res/layout/item_transaction.xml
+++ b/app/src/main/res/layout/item_transaction.xml
@@ -14,10 +14,10 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:fontFamily="sans-serif-medium"
         android:lines="1"
         android:text="The Home Depot"
-        android:textSize="16sp"
+        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
+        android:textStyle="bold"
         app:layout_constraintEnd_toStartOf="@+id/textTransactionAmount"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -26,8 +26,9 @@
         android:id="@+id/textTransactionLocation"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:fontFamily="sans-serif-light"
         android:text="San Francisco, CA"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        android:textColor="@android:color/darker_gray"
         app:layout_constraintEnd_toEndOf="@+id/textTransactionAmount"
         app:layout_constraintStart_toStartOf="@+id/textTransactionName"
         app:layout_constraintTop_toBottomOf="@+id/textTransactionName" />
@@ -36,8 +37,9 @@
         android:id="@+id/textTransactionDate"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:fontFamily="sans-serif-light"
         android:text="TextView"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        android:textColor="@android:color/darker_gray"
         app:layout_constraintEnd_toEndOf="@+id/textTransactionName"
         app:layout_constraintStart_toStartOf="@+id/textTransactionName"
         app:layout_constraintTop_toBottomOf="@+id/textTransactionLocation"
@@ -50,15 +52,15 @@
         android:layout_marginEnd="8dp"
         android:text="$22.14"
         android:textAlignment="viewEnd"
-        android:textSize="16sp"
+        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
         app:layout_constraintBottom_toBottomOf="@+id/textTransactionName"
         app:layout_constraintEnd_toStartOf="@+id/imageView"
         app:layout_constraintTop_toTopOf="@+id/textTransactionName" />
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="16sp"
+        android:layout_height="16sp"
         android:layout_marginEnd="8dp"
         app:layout_constraintBottom_toBottomOf="@+id/textTransactionAmount"
         app:layout_constraintEnd_toEndOf="parent"
