--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,5 +7,6 @@
         <item name="colorAccent">@color/colorAccent</item>
         <item name="android:letterSpacing">0</item>
         <item name="android:textAllCaps">false</item>
+        <item name="cornerFamily">rounded</item>
     </style>
 </resources>
