Add Robinhood Spark and NestedScrollView

--- a/app/src/main/res/layout/item_transaction.xml
+++ b/app/src/main/res/layout/item_transaction.xml
@@ -15,7 +15,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:lines="1"
-        android:text="The Home Depot"
+        android:text="This is a very long text that repeats itself over and over"
         android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
         android:textStyle="bold"
         app:layout_constraintEnd_toStartOf="@+id/textTransactionAmount"
@@ -28,7 +28,7 @@
         android:layout_height="wrap_content"
         android:text="San Francisco, CA"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-        android:textColor="@android:color/darker_gray"
+        android:textColor="@android:color/tertiary_text_light"
         app:layout_constraintEnd_toEndOf="@+id/textTransactionAmount"
         app:layout_constraintStart_toStartOf="@+id/textTransactionName"
         app:layout_constraintTop_toBottomOf="@+id/textTransactionName" />
@@ -39,7 +39,7 @@
         android:layout_height="wrap_content"
         android:text="TextView"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-        android:textColor="@android:color/darker_gray"
+        android:textColor="@android:color/tertiary_text_light"
         app:layout_constraintEnd_toEndOf="@+id/textTransactionName"
         app:layout_constraintStart_toStartOf="@+id/textTransactionName"
         app:layout_constraintTop_toBottomOf="@+id/textTransactionLocation"
@@ -50,15 +50,16 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
-        android:text="$22.14"
+        android:maxLines="1"
+        android:text="$500000.14"
         android:textAlignment="viewEnd"
         android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
         app:layout_constraintBottom_toBottomOf="@+id/textTransactionName"
-        app:layout_constraintEnd_toStartOf="@+id/imageView"
+        app:layout_constraintEnd_toStartOf="@+id/imageArrowForward"
         app:layout_constraintTop_toTopOf="@+id/textTransactionName" />
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/imageArrowForward"
         android:layout_width="16sp"
         android:layout_height="16sp"
         android:layout_marginEnd="8dp"
