--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -25,25 +25,139 @@
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_margin="8dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginBottom="8dp"
                 app:cardCornerRadius="8dp"
                 app:cardElevation="0dp"
                 app:cardUseCompatPadding="true">
 
-                <com.robinhood.spark.SparkView
-                    android:id="@+id/sparkView"
+                <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
-                    android:layout_height="200dp"
-                    android:layout_margin="16dp"
-                    android:layout_marginStart="16dp"
-                    app:spark_lineColor="@color/colorAccent"
-                    app:spark_scrubEnabled="true" />
+                    android:layout_height="match_parent">
+
+                    <TextView
+                        android:id="@+id/textViewBalance"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="16dp"
+                        android:layout_marginTop="8dp"
+                        android:layout_marginEnd="16dp"
+                        android:text="Current Balance"
+                        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
+                        android:textStyle="bold"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <TextView
+                        android:id="@+id/textViewCurrentBalanceAmount"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:text="$5134.82"
+                        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
+                        android:textStyle="bold"
+                        app:layout_constraintEnd_toEndOf="@+id/textViewBalance"
+                        app:layout_constraintStart_toStartOf="@+id/textViewBalance"
+                        app:layout_constraintTop_toBottomOf="@+id/textViewBalance" />
+
+                    <TextView
+                        android:id="@+id/textViewAmountChange"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="8dp"
+                        android:fontFamily="sans-serif-medium"
+                        android:text="$216.33 (1.51%) Past Month"
+                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
+                        android:textSize="10sp"
+                        app:layout_constraintEnd_toEndOf="@+id/textViewCurrentBalanceAmount"
+                        app:layout_constraintStart_toStartOf="@+id/textViewCurrentBalanceAmount"
+                        app:layout_constraintTop_toBottomOf="@+id/textViewCurrentBalanceAmount" />
+
+                    <com.robinhood.spark.SparkView
+                        android:id="@+id/sparkView"
+                        android:layout_width="match_parent"
+                        android:layout_height="200dp"
+                        android:layout_marginStart="16dp"
+                        android:layout_marginTop="16dp"
+                        android:layout_marginEnd="16dp"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@id/textViewAmountChange"
+                        app:spark_lineColor="@color/colorAccent"
+                        app:spark_scrubEnabled="true" />
+
+                    <TextView
+                        android:id="@+id/textViewOneMonth"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="32dp"
+                        android:layout_marginTop="16dp"
+                        android:layout_marginEnd="8dp"
+                        android:layout_marginBottom="16dp"
+                        android:text="1M"
+                        android:textAlignment="center"
+                        android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
+                        android:textSize="12sp"
+                        android:textStyle="bold"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toStartOf="@+id/textViewThreeMonths"
+                        app:layout_constraintStart_toStartOf="@+id/sparkView"
+                        app:layout_constraintTop_toBottomOf="@+id/sparkView" />
+
+                    <TextView
+                        android:id="@+id/textViewThreeMonths"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="8dp"
+                        android:layout_marginEnd="8dp"
+                        android:text="3M"
+                        android:textAlignment="center"
+                        android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
+                        android:textSize="12sp"
+                        android:textStyle="bold"
+                        app:layout_constraintBottom_toBottomOf="@+id/textViewOneMonth"
+                        app:layout_constraintEnd_toStartOf="@+id/textViewOneYear"
+                        app:layout_constraintStart_toEndOf="@+id/textViewOneMonth"
+                        app:layout_constraintTop_toTopOf="@+id/textViewOneMonth" />
+
+                    <TextView
+                        android:id="@+id/textViewOneYear"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="8dp"
+                        android:layout_marginEnd="32dp"
+                        android:text="1Y"
+                        android:textAlignment="center"
+                        android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
+                        android:textSize="12sp"
+                        android:textStyle="bold"
+                        app:layout_constraintBottom_toBottomOf="@+id/textViewThreeMonths"
+                        app:layout_constraintEnd_toEndOf="@+id/sparkView"
+                        app:layout_constraintStart_toEndOf="@+id/textViewThreeMonths"
+                        app:layout_constraintTop_toTopOf="@+id/textViewThreeMonths" />
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
             </androidx.cardview.widget.CardView>
+
+            <TextView
+                android:id="@+id/textViewLatestTransaction"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="13dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="13dp"
+                android:text="Latest Transactions"
+                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
+                android:textStyle="bold" />
 
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_margin="8dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginBottom="8dp"
                 app:cardCornerRadius="8dp"
                 app:cardElevation="0dp"
                 app:cardUseCompatPadding="true">
