Add monthSoFar ratio and balance calculation

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -25,10 +25,7 @@
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginEnd="8dp"
-                android:layout_marginBottom="8dp"
+                android:layout_margin="8dp"
                 app:cardCornerRadius="8dp"
                 app:cardElevation="0dp"
                 app:cardUseCompatPadding="true">
@@ -55,7 +52,7 @@
                         android:id="@+id/textViewCurrentBalanceAmount"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:text="$5134.82"
+                        android:text="Calculating..."
                         android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                         android:textStyle="bold"
                         app:layout_constraintEnd_toEndOf="@+id/textViewBalance"
@@ -68,7 +65,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="8dp"
                         android:fontFamily="sans-serif-medium"
-                        android:text="$216.33 (1.51%) Past Month"
+                        android:text="$216.33 (1.51%)"
                         android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                         android:textSize="10sp"
                         app:layout_constraintEnd_toEndOf="@+id/textViewCurrentBalanceAmount"
@@ -79,9 +76,7 @@
                         android:id="@+id/sparkView"
                         android:layout_width="match_parent"
                         android:layout_height="200dp"
-                        android:layout_marginStart="16dp"
                         android:layout_marginTop="16dp"
-                        android:layout_marginEnd="16dp"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@id/textViewAmountChange"
