--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -80,19 +80,20 @@
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@id/textViewAmountChange"
-                        app:spark_lineColor="@color/colorAccent"
+                        app:spark_lineColor="@color/colorPrimary"
                         app:spark_scrubEnabled="true" />
 
                     <TextView
                         android:id="@+id/textViewOneMonth"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
+                        android:layout_width="48dp"
+                        android:layout_height="32dp"
                         android:layout_marginStart="32dp"
                         android:layout_marginTop="16dp"
                         android:layout_marginEnd="8dp"
                         android:layout_marginBottom="16dp"
+                        android:gravity="center"
+                        android:padding="4dp"
                         android:text="1M"
-                        android:textAlignment="center"
                         android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
                         android:textSize="12sp"
                         android:textStyle="bold"
@@ -103,12 +104,13 @@
 
                     <TextView
                         android:id="@+id/textViewThreeMonths"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
+                        android:layout_width="48dp"
+                        android:layout_height="32dp"
                         android:layout_marginStart="8dp"
                         android:layout_marginEnd="8dp"
+                        android:gravity="center"
+                        android:padding="4dp"
                         android:text="3M"
-                        android:textAlignment="center"
                         android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
                         android:textSize="12sp"
                         android:textStyle="bold"
@@ -119,12 +121,13 @@
 
                     <TextView
                         android:id="@+id/textViewOneYear"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
+                        android:layout_width="48dp"
+                        android:layout_height="32dp"
                         android:layout_marginStart="8dp"
                         android:layout_marginEnd="32dp"
+                        android:gravity="center"
+                        android:padding="4dp"
                         android:text="1Y"
-                        android:textAlignment="center"
                         android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
                         android:textSize="12sp"
                         android:textStyle="bold"
