--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/constraintLayoutHomeFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.home.HomeFragment">
 
     <androidx.core.widget.NestedScrollView
+        android:id="@+id/nestedScrollViewHome"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="#EFEFEF"
@@ -26,7 +27,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_margin="8dp"
-                app:cardCornerRadius="8dp"
+                app:cardCornerRadius="12dp"
                 app:cardElevation="0dp"
                 app:cardUseCompatPadding="true">
 
@@ -85,8 +86,8 @@
 
                     <TextView
                         android:id="@+id/textViewOneMonth"
-                        android:layout_width="48dp"
-                        android:layout_height="32dp"
+                        android:layout_width="35dp"
+                        android:layout_height="25dp"
                         android:layout_marginStart="32dp"
                         android:layout_marginTop="16dp"
                         android:layout_marginEnd="8dp"
@@ -104,8 +105,8 @@
 
                     <TextView
                         android:id="@+id/textViewThreeMonths"
-                        android:layout_width="48dp"
-                        android:layout_height="32dp"
+                        android:layout_width="35dp"
+                        android:layout_height="25dp"
                         android:layout_marginStart="8dp"
                         android:layout_marginEnd="8dp"
                         android:gravity="center"
@@ -121,8 +122,8 @@
 
                     <TextView
                         android:id="@+id/textViewOneYear"
-                        android:layout_width="48dp"
-                        android:layout_height="32dp"
+                        android:layout_width="35dp"
+                        android:layout_height="25dp"
                         android:layout_marginStart="8dp"
                         android:layout_marginEnd="32dp"
                         android:gravity="center"
@@ -156,7 +157,7 @@
                 android:layout_marginStart="8dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginBottom="8dp"
-                app:cardCornerRadius="8dp"
+                app:cardCornerRadius="12dp"
                 app:cardElevation="0dp"
                 app:cardUseCompatPadding="true">
 
