--- a/app/src/main/res/layout/item_transaction.xml
+++ b/app/src/main/res/layout/item_transaction.xml
@@ -5,7 +5,7 @@
     android:id="@+id/constraintLayoutTransactionItem"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:visibility="visible">
+    android:background="?attr/selectableItemBackground">
 
     <TextView
         android:id="@+id/textViewTransactionName"
