--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#2196F3</color>
+    <color name="colorPrimary">#039BE5</color>
     <color name="colorPrimaryDark">#000000</color>
-    <color name="colorAccent">#1976D2</color>
+    <color name="colorAccent">#2196F3</color>
     <color name="colorOnBackground">#FFFFFF</color>
 </resources>
